# gitlab-mcp

./: .env.example  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  Makefile  README.md  TEST_GUIDE.md  gitlab_mcp.py  pyproject.toml  test_detection.py  test_fastmcp.py  test_server.py
.github/workflows/: ci.yml  publish.yml
gitlab_mcp/: __init__.py  models.py  server.py
gitlab_mcp/client/: __init__.py  base.py  files.py  issues.py  merge_requests.py  pipelines.py  releases.py  variables.py
gitlab_mcp/resources/: __init__.py  help.py  issues.py  merge_requests.py  pipelines.py  releases.py  variables.py
gitlab_mcp/tools/: __init__.py  files.py  issues.py  merge_requests.py  pipelines.py  releases.py  variables.py
gitlab_mcp/utils/: __init__.py  decorators.py  discussions.py  errors.py  images.py  resolvers.py
qodev_gitlab_mcp/: __init__.py  models.py  server.py
qodev_gitlab_mcp/resources/: __init__.py  help.py  issues.py  merge_requests.py  pipelines.py  releases.py  variables.py
qodev_gitlab_mcp/tools/: __init__.py  files.py  issues.py  merge_requests.py  pipelines.py  releases.py  variables.py
qodev_gitlab_mcp/utils/: __init__.py  decorators.py  git.py  images.py  resolvers.py
tests/: conftest.py
tests/integration/: test_resources.py
tests/unit/: test_gitlab_client.py
