[project]
name = "gitlab-mcp"
version = "1.0.0"
description = "Production-ready GitLab MCP server exposing projects, merge requests, pipelines, and discussions"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Jan Scheffler"}
]
requires-python = ">=3.11"
keywords = ["gitlab", "mcp", "model-context-protocol", "ai", "claude"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]

dependencies = [
    "httpx~=0.27.0",
    "fastmcp~=1.0.0",
    "python-dotenv~=1.0.0",
]

[project.urls]
Homepage = "https://github.com/janscheffler/gitlab-mcp"
Repository = "https://github.com/janscheffler/gitlab-mcp"
Issues = "https://github.com/janscheffler/gitlab-mcp/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest~=8.0.0",
]
