[project]
name = "gitlab-mcp"
version = "1.0.0"
description = "Production-ready GitLab MCP server exposing projects, merge requests, pipelines, and discussions"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Jan Scheffler"}
]
requires-python = ">=3.11"
keywords = ["gitlab", "mcp", "model-context-protocol", "ai", "claude"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]

dependencies = [
    "httpx>=0.28.1",
    "fastmcp>=2.2.5",
    "python-dotenv>=1.1.0",
]

[project.urls]
Homepage = "https://github.com/janscheffler/gitlab-mcp"
Repository = "https://github.com/janscheffler/gitlab-mcp"
Issues = "https://github.com/janscheffler/gitlab-mcp/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest~=8.0.0",
    "mypy~=1.13.0",
    "ruff~=0.8.0",
]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # Line too long (handled by formatter)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
disallow_any_unimported = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
check_untyped_defs = true
strict_optional = true
