[project]
name = "qodev-gitlab-mcp"
version = "0.2.2"
description = "Production-ready GitLab MCP server exposing projects, merge requests, pipelines, and discussions"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Jan Scheffler"}
]
requires-python = ">=3.11"
keywords = ["gitlab", "mcp", "model-context-protocol", "ai", "claude"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]

dependencies = [
    "qodev-gitlab-api>=0.1.2",
    "fastmcp>=2.2.5",
]

[tool.uv.sources]
qodev-gitlab-api = { path = "../../libs/gitlab" }

[project.urls]
Homepage = "https://github.com/qodevai/gitlab-mcp"
Repository = "https://github.com/qodevai/gitlab-mcp"
Issues = "https://github.com/qodevai/gitlab-mcp/issues"

[project.scripts]
qodev-gitlab-mcp = "qodev_gitlab_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # Line too long (handled by formatter)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
disallow_any_unimported = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
check_untyped_defs = true
strict_optional = true

[[tool.mypy.overrides]]
module = "qodev_gitlab_api.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: marks tests as integration tests (may require GitLab access)",
]

[tool.coverage.run]
source = ["qodev_gitlab_mcp"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

[tool.typos.default]
extend-ignore-re = ["[0-9a-zA-Z]{40,}"]
extend-words = { noteable = "noteable" }

[tool.typos.files]
extend-exclude = ["uv.lock", "*.log"]
